--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       </footer>
     </div>
 
+    <div>
+        <p>Hello there</p>
+    </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
