--- a/index.html
+++ b/index.html
@@ -184,51 +184,42 @@
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail"
-src="5.jpg"
-                            alt="">
+                            <img class="img-fluid img-thumbnail" src="5.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="6.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="6.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="7.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="7.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="8.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="8.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="9.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="9.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="10.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="10.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="11.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="11.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                         <a href="" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="12.jpg"
-                                alt="">
+                            <img class="img-fluid img-thumbnail" src="12.jpg" alt="">
                         </a>
                     </div>
                 </div>
