--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I'm Connor, a 19-year-old based in Ajax, Ontario. I’m into anything cars, computers, and a little chaos. I spend most of my time building cool stuff or tearing something apart just to understand how it works. <br><br>I’m currently on a racing team, which mixes my love for speed, tech, and teamwork. I’m always chasing the next adventure—whether that’s coding something new, tuning engines, or exploring somewhere I’ve never been.</p>
+        <p>I'm Connor, a 19-year-old based in Whitby, Ontario. I’m into anything cars, computers, and a little chaos. I spend most of my time building cool stuff or tearing something apart just to understand how it works. <br><br>I’m currently on a racing team, which mixes my love for speed, tech, and teamwork. I’m always chasing the next adventure—whether that’s coding something new, tuning engines, or exploring somewhere I’ve never been.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
