--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>I’m good at fixing sh*t and thinking on my feet. I don’t freeze up when things go wrong - I troubleshoot, adapt, and keep moving. Whether it's a small hiccup or total chaos, I find a way through it without losing my cool.</p>
+        <p>I’m good at fixing problems and thinking on my feet. I don’t freeze up when things go wrong - I troubleshoot, adapt, and keep moving. Whether it's a small hiccup or total chaos, I find a way through it without losing my cool.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
