--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <a href="https://www.threads.com/@connor12858" class="threads"><i class="bi bi-threads"></i></a>
       <a href="https://www.linkedin.com/in/connor-godden-a12472298/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="https://github.com/Connor12858" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://gallery.connor12858.ca" class="images"><i class="bi bi-images"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
