--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="social-links text-center">
       <a href="https://www.facebook.com/connor12858" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/connor12858/" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.threads.com/@connor12858" class="threads"><i class="bi bi-threads"></i></a>
+     <!-- <a href="https://www.threads.com/@connor12858" class="threads"><i class="bi bi-threads"></i></a>-->
       <a href="https://www.linkedin.com/in/connor-godden-a12472298/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="https://github.com/Connor12858" class="github"><i class="bi bi-github"></i></a>
       <a href="https://gallery.connor12858.ca" class="images"><i class="bi bi-images"></i></a>
